--- a/src/pages/Loging.html
+++ b/src/pages/Loging.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>CRUD</title>
-  <link rel="stylesheet" href="../src/styles/base.css">
-  <link rel="stylesheet" href="../src/styles/footer.css">
-  <link rel="stylesheet" href="../src/styles/header.css">
-  <link rel="stylesheet" href="../src/styles/usuario.css">
+  <link rel="stylesheet" href="../styles/base.css">
+  <link rel="stylesheet" href="../styles/footer.css">
+  <link rel="stylesheet" href="../styles/header.css">
+  <link rel="stylesheet" href="../styles/user.css">
 
   <!-- Fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,34 +22,31 @@
   <header>
     <nav class="nav">
       <div class="menu-toggle" id="menu-toggle">☰</div>
-
       <!-- Logo -->
       <div class="logo-container">
-        <a href="index.html">
-        <img class="logo" src="../src/img/icons/logo.png" alt="Logo"></button>
+        <a href="../../public/index.html">
+        <img class="logo" src="../img/icons/logo.png" alt="Logo">
         </a>
       </div>
-
       <!-- Menú desplegable -->
       <ul class="menu" id="menu">
-        <li><a href="../public/index.html">Inicio</a></li>
-        <li><a href="#">Género</a></li>
-        <li><a href="#">Servicios</a></li>
-        <li><a href="#">Contacto</a></li>
-      </ul>
-
+        <li><a href="../../public/index.html">Inicio</a></li>           
+        <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>    
+        <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
+        <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
+        <li><a href="#">Contactanos</a></li>
+      </ul>      
       <!-- Barra de búsqueda -->
       <div class="search-bar">
         <input type="text" placeholder="Buscar producto" id="searchText">
         <button id="searchButton">
-          <img src="../src/img/icons/search-icon.png" alt="Buscar" class="search-icon">
+          <img src="../img/icons/search-icon.png" alt="Buscar" class="search-icon">
         </button>
       </div>
-
       <!-- Iconos -->
       <div class="user-buttons">
-        <button class="users"><img src="../src/img/icons/users2.png" alt="Perfil"></button>
-        <button class="favs"><img src="../src/img/icons/favs2.png" alt="Me gusta"></button>
+       <a href="../pages/Loging.html"><button class="users"><img src="../img/icons/users.png" alt="Perfil"></button></a>
+        <button class="favs"><img src="../img/icons/favs.png" alt="Me gusta"></button>
       </div>
     </nav>
   </header>
@@ -60,20 +57,16 @@
   <input type="password" id="password" placeholder="Contraseña" required />
   <button type="submit">Entrar</button>
 </form>
-
-
-
-
-<footer>
-  <div class="pie">
-    <a href="mailto:contacto@adamy.com" target="_blank">CONTAC US HERE</a>
+<footer class="site-footer">
+  <div class="footer-content">
+    <a href="mailto:contacto@adamy.com" target="_blank">CONTACT US HERE</a>
     <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
     <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
   </div>
 </footer>
-<script src="../src/components/usuario.js"></script>
-<script src="../src/components/Burguer-menu.js"></script>
-<script src="../src/components/loging.js"></script>
+<script src="../components/usuario.js"></script>
+<script src="../components/Burguer-menu.js"></script>
+<script src="../components/loging.js"></script>
 </body>
 
 </html>
