--- a/src/pages/ProductsShow.html
+++ b/src/pages/ProductsShow.html
@@ -21,26 +21,23 @@
 
 <body>
 
- <header>
+<header>
     <nav class="nav">
       <div class="menu-toggle" id="menu-toggle">☰</div>
-
       <!-- Logo -->
-       
       <div class="logo-container">
         <a href="../../public/index.html">
         <img class="logo" src="../img/icons/logo.png" alt="Logo">
-      </a>
+        </a>
       </div>
-
       <!-- Menú desplegable -->
       <ul class="menu" id="menu">
-        <li><a href="../public/index.html">Inicio</a></li>
-        <li><a href="#">Género</a></li>
-        <li><a href="#">Servicios</a></li>
-        <li><a href="#">Contacto</a></li>
-      </ul>
-
+        <li><a href="../../public/index.html">Inicio</a></li>           
+        <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>    
+        <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
+        <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
+        <li><a href="#">Contactanos</a></li>
+      </ul>      
       <!-- Barra de búsqueda -->
       <div class="search-bar">
         <input type="text" placeholder="Buscar producto" id="searchText">
@@ -48,11 +45,10 @@
           <img src="../img/icons/search-icon.png" alt="Buscar" class="search-icon">
         </button>
       </div>
-
       <!-- Iconos -->
       <div class="user-buttons">
-       <a href="../public/loging.html"><button class="users"><img src="../img/icons/users2.png" alt="Perfil"></button></a>
-        <button class="favs"><img src="../img/icons/favs2.png" alt="Me gusta"></button>
+       <a href="../pages/Loging.html"><button class="users"><img src="../img/icons/users.png" alt="Perfil"></button></a>
+        <button class="favs"><img src="../img/icons/favs.png" alt="Me gusta"></button>
       </div>
     </nav>
   </header>
@@ -122,9 +118,9 @@
 </div>
 </main>
 
-<footer>
-  <div class="pie">
-    <a href="mailto:contacto@adamy.com" target="_blank">CONTAC US HERE</a>
+<footer class="site-footer">
+  <div class="footer-content">
+    <a href="mailto:contacto@adamy.com" target="_blank">CONTACT US HERE</a>
     <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
     <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
   </div>
