--- a/src/pages/AdminPage.html
+++ b/src/pages/AdminPage.html
@@ -1,1 +1,120 @@
-<!-- Vista de administración con funcionalidades CRUD -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../styles/base.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/form.css">
+
+    <!-- Fuentes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap"
+        rel="stylesheet">
+</head>
+<header>
+    <nav class="nav">
+      <div class="menu-toggle" id="menu-toggle">☰</div>
+      <!-- Logo -->
+      <div class="logo-container">
+        <a href="../../public/index.html">
+        <img class="logo" src="../img/icons/logo.png" alt="Logo">
+        </a>
+      </div>
+      <!-- Menú desplegable -->
+      <ul class="menu" id="menu">
+        <li><a href="../../public/index.html">Inicio</a></li>           
+        <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>
+        <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
+        <li><a href="#" class="link-hover" data-id="Otoño">Temporada</a></li>
+        <li><a href="#">Contactanos</a></li>
+      </ul>      
+      <!-- Barra de búsqueda -->
+      <div class="search-bar">
+        <input type="text" placeholder="Buscar producto" id="searchText">
+        <button id="searchButton">
+          <img src="../img/icons/search-icon.png" alt="Buscar" class="search-icon">
+        </button>
+      </div>
+      <!-- Iconos -->
+      <div class="user-buttons">
+       <a href="../pages/Loging.html"><button class="users"><img src="../img/icons/users.png" alt="Perfil"></button></a>
+        <button class="favs"><img src="../img/icons/favs.png" alt="Me gusta"></button>
+      </div>
+    </nav>
+  </header>
+  <form id="form">
+  <h3 id="formTitle">Agregar prenda de ropa</h3>
+  <div class="form-grid">
+    <input type="text" placeholder="Nombre" id="name" required />
+    <input type="text" placeholder="Descripción" id="description" />
+    <input type="text" placeholder="Imagen (nombre archivo)" id="image" />
+    <input type="number" placeholder="Precio" id="price" step="0.01" />
+    <input type="number" placeholder="Descuento (%)" id="discount" />
+
+    <select id="color" required>
+      <option value="">Color</option>
+      <option value="Negro">Negro</option>
+      <option value="Azul">Azul</option>
+      <option value="Blanco">Blanco</option>
+      <option value="Rojo">Rojo</option>
+      <option value="Beige">Beige</option>
+      <option value="Verde">Verde</option>
+      <option value="Rosa">Rosa</option>
+      <option value="Gris">Gris</option>
+    </select>
+
+    <select id="gender" required>
+      <option value="">Género</option>
+      <option value="Hombre">Hombre</option>
+      <option value="Mujer">Mujer</option>
+    </select>
+
+    <select id="season" required>
+      <option value="">Temporada</option>
+      <option value="Primavera">Primavera</option>
+      <option value="Verano">Verano</option>
+      <option value="Otoño">Otoño</option>
+      <option value="Invierno">Invierno</option>
+    </select>
+
+    <input type="text" placeholder="Tipo" id="type" />
+
+    <input type="date" placeholder="Fecha de lanzamiento" id="release_date" />
+
+    <select id="style" required>
+      <option value="">Estilo</option>
+      <option value="Casual">Casual</option>
+      <option value="Formal">Formal</option>
+      <option value="Semi-Formal">Semi-Formal</option>
+      <option value="Deportivo">Deportivo</option>
+    </select>
+
+    <input type="hidden" id="editIndex" />
+  </div>
+
+  <div class="form-actions">
+    <button type="submit" class="btn primary">Guardar</button>
+    <button type="button" id="btnCancel" class="btn secondary">Cancelar</button>
+  </div>
+</form>
+<footer class="site-footer">
+  <div class="footer-content">
+    <a href="mailto:contacto@adamy.com" target="_blank">CONTACT US HERE</a>
+    <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
+    <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
+  </div>
+</footer>
+  <script src="../components/Burguer-menu.js"></script>
+
+
+<body>
+
+</body>
+
+</html>
