--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -54,6 +54,14 @@
     </nav>
   </header>
 
+  <div class="conocerte-container">
+  <img src="../img/icons/queremosconocerte.jpg" alt="Imagen" class="conocerte-imagen">
+  </div>
+  <div class="conocerte-texto">
+    ¡Queremos conocerte más!
+  </div>
+
+
 
    <footer>
     <div class="pie">
