--- a/src/pages/ProductsShow.html
+++ b/src/pages/ProductsShow.html
@@ -26,7 +26,7 @@
       <div class="menu-toggle" id="menu-toggle">☰</div>
       <!-- Logo -->
       <div class="logo-container">
-        <a href="index.html">
+        <a href="../../public/index.html">
         <img class="logo" src="../img/icons/logo.png" alt="Logo">
         </a>
         </a>
