--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       <div class="search-bar">
         <input type="text" placeholder="Buscar producto" id="searchText">
         <button id="searchButton">
-          <img src="../img/icons/search-icon.png" alt="Buscar" class="search-icon">
+          <img src="../src/img/icons/search-icon.png" alt="Buscar" class="search-icon">
         </button>
       </div>
       <!-- Iconos -->
@@ -54,7 +54,7 @@
 
   <div class="background-video">
     <video autoplay muted loop playsinline>
-      <source src="../img/background/background-video.mp4" type="video/mp4" />
+      <source src="../src/img/background/background-video.mp4" type="video/mp4" />
     </video>
     <div class="video-text">
       <h1>NEW COLLECTION</h1>
