--- a/src/pages/Loging.html
+++ b/src/pages/Loging.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>CRUD</title>
-  <link rel="stylesheet" href="../styles/base.css">
   <link rel="stylesheet" href="../styles/footer.css">
   <link rel="stylesheet" href="../styles/header.css">
   <link rel="stylesheet" href="../styles/user.css">
@@ -26,6 +25,7 @@
       <div class="logo-container">
         <a href="../../public/index.html">
         <img class="logo" src="../img/icons/logo.png" alt="Logo">
+        </a>
         </a>
       </div>
       <!-- Menú desplegable -->
@@ -64,9 +64,10 @@
     <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
   </div>
 </footer>
-<script src="../components/usuario.js"></script>
+<script src="../components/user.js"></script>
 <script src="../components/Burguer-menu.js"></script>
-<script src="../components/loging.js"></script>
+<script src="../components/indexToProducts.js"></script>
+
 </body>
 
 </html>
