--- a/src/pages/AdminPage.html
+++ b/src/pages/AdminPage.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/header.css">
-    <link rel="stylesheet" href="../styles/form.css">
+    <link rel="stylesheet" href="../styles/admin.css">
 
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,13 +24,14 @@
         <a href="../../public/index.html">
         <img class="logo" src="../img/icons/logo.png" alt="Logo">
         </a>
+        </a>
       </div>
       <!-- Menú desplegable -->
       <ul class="menu" id="menu">
         <li><a href="../../public/index.html">Inicio</a></li>           
-        <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>
+        <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>    
         <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
-        <li><a href="#" class="link-hover" data-id="Otoño">Temporada</a></li>
+        <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
         <li><a href="#">Contactanos</a></li>
       </ul>      
       <!-- Barra de búsqueda -->
@@ -48,61 +48,68 @@
       </div>
     </nav>
   </header>
-  <form id="form">
-  <h3 id="formTitle">Agregar prenda de ropa</h3>
-  <div class="form-grid">
-    <input type="text" placeholder="Nombre" id="name" required />
-    <input type="text" placeholder="Descripción" id="description" />
-    <input type="text" placeholder="Imagen (nombre archivo)" id="image" />
-    <input type="number" placeholder="Precio" id="price" step="0.01" />
-    <input type="number" placeholder="Descuento (%)" id="discount" />
+    <h1>Panel de Administración</h1>
 
-    <select id="color" required>
-      <option value="">Color</option>
-      <option value="Negro">Negro</option>
-      <option value="Azul">Azul</option>
-      <option value="Blanco">Blanco</option>
-      <option value="Rojo">Rojo</option>
-      <option value="Beige">Beige</option>
-      <option value="Verde">Verde</option>
-      <option value="Rosa">Rosa</option>
-      <option value="Gris">Gris</option>
-    </select>
+    <div class="admin-buttons">
+      <button id="btnAdd">Añadir producto</button>
+      <button id="btnEdit">Editar producto</button>
+      <button id="btnDelete">Eliminar producto</button>
+    </div>
 
-    <select id="gender" required>
-      <option value="">Género</option>
-      <option value="Hombre">Hombre</option>
-      <option value="Mujer">Mujer</option>
-    </select>
+    <!-- Formulario (oculto por defecto) -->
+    <form id="form" class="hidden">
+      <h3 id="formTitle">Agregar prenda de ropa</h3>
+      <div class="form-grid">
+        <input type="text" placeholder="Nombre" id="name" required />
+        <input type="text" placeholder="Descripción" id="description" />
+        <input type="text" placeholder="Imagen (nombre archivo)" id="image" />
+        <input type="number" placeholder="Precio" id="price" step="0.01" />
+        <input type="number" placeholder="Descuento (%)" id="discount" />
 
-    <select id="season" required>
-      <option value="">Temporada</option>
-      <option value="Primavera">Primavera</option>
-      <option value="Verano">Verano</option>
-      <option value="Otoño">Otoño</option>
-      <option value="Invierno">Invierno</option>
-    </select>
+        <select id="color" required>
+          <option value="">Color</option>
+          <option value="Negro">Negro</option>
+          <option value="Azul">Azul</option>
+          <option value="Blanco">Blanco</option>
+          <option value="Rojo">Rojo</option>
+          <option value="Beige">Beige</option>
+          <option value="Verde">Verde</option>
+          <option value="Rosa">Rosa</option>
+          <option value="Gris">Gris</option>
+        </select>
 
-    <input type="text" placeholder="Tipo" id="type" />
+        <select id="gender" required>
+          <option value="">Género</option>
+          <option value="Hombre">Hombre</option>
+          <option value="Mujer">Mujer</option>
+        </select>
 
-    <input type="date" placeholder="Fecha de lanzamiento" id="release_date" />
+        <select id="season" required>
+          <option value="">Temporada</option>
+          <option value="Primavera">Primavera</option>
+          <option value="Verano">Verano</option>
+          <option value="Otoño">Otoño</option>
+          <option value="Invierno">Invierno</option>
+        </select>
 
-    <select id="style" required>
-      <option value="">Estilo</option>
-      <option value="Casual">Casual</option>
-      <option value="Formal">Formal</option>
-      <option value="Semi-Formal">Semi-Formal</option>
-      <option value="Deportivo">Deportivo</option>
-    </select>
+        <input type="text" placeholder="Tipo" id="type" />
+        <input type="date" placeholder="Fecha de lanzamiento" id="release_date" />
 
-    <input type="hidden" id="editIndex" />
-  </div>
+        <select id="style" required>
+          <option value="">Estilo</option>
+          <option value="Casual">Casual</option>
+          <option value="Formal">Formal</option>
+          <option value="Deportivo">Deportivo</option>
+        </select>
 
-  <div class="form-actions">
-    <button type="submit" class="btn primary">Guardar</button>
-    <button type="button" id="btnCancel" class="btn secondary">Cancelar</button>
-  </div>
-</form>
+        <input type="hidden" id="editId" />
+      </div>
+
+      <div class="form-actions">
+        <button type="submit" class="btn primary">Guardar</button>
+        <button type="button" id="btnCancel" class="btn secondary">Cancelar</button>
+      </div>
+    </form>
 <footer class="site-footer">
   <div class="footer-content">
     <a href="mailto:contacto@adamy.com" target="_blank">CONTACT US HERE</a>
@@ -111,6 +118,9 @@
   </div>
 </footer>
   <script src="../components/Burguer-menu.js"></script>
+  <script src="../components/admin.js"></script>
+  <script src="../src/components/indexToProducts.js"></script>
+
 
 
 <body>
