--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CRUD</title>
+  <title>ADAMY</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="../src/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../src/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../src/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="../src/img/favicon/site.webmanifest">
+
   <link rel="stylesheet" href="../src/styles/base.css">
   <link rel="stylesheet" href="../src/styles/footer.css">
   <link rel="stylesheet" href="../src/styles/header.css">
@@ -14,7 +20,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap"
     rel="stylesheet">
-
 </head>
 
 <body>
@@ -24,12 +29,12 @@
       <!-- Logo -->
       <div class="logo-container">
         <a href="index.html">
-        <img class="logo" src="../src/img/icons/logo.png" alt="Logo">
+          <img class="logo" src="../src/img/icons/logo.png" alt="Logo">
         </a>
       </div>
       <!-- Menú desplegable -->
       <ul class="menu" id="menu">
-        <li><a href="#">Inicio</a></li>           
+        <li><a href="#">Inicio</a></li>
         <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>
         <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
         <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
@@ -45,7 +50,8 @@
       </div>
       <!-- Iconos -->
       <div class="user-buttons">
-       <a href="../src/pages/Loging.html"><button class="users"><img src="../src/img/icons/users.png" alt="Perfil"></button></a>
+        <a href="../src/pages/Loging.html"><button class="users"><img src="../src/img/icons/users.png"
+              alt="Perfil"></button></a>
         <button class="favs"><img src="../src/img/icons/favs.png" alt="Me gusta"></button>
       </div>
     </nav>
@@ -82,13 +88,13 @@
     </div>
   </div>
 
-<footer class="site-footer">
-  <div class="footer-content">
-    <a href="mailto:contacto@adamy.com" target="_blank">CONTACT US HERE</a>
-    <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
-    <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
-  </div>
-</footer>
+  <footer class="site-footer">
+    <div class="footer-content">
+      <a href="mailto:contacto@adamy.com" target="_blank">CONTACT US HERE</a>
+      <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
+      <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
+    </div>
+  </footer>
   <script src="../src/components/Burguer-menu.js"></script>
   <script src="../src/components/indexToProducts.js"></script>
 </body>
