--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -3,7 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CRUD</title>
+  <title>Contacto</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="../src/img/favicon/site.webmanifest">
+
   <link rel="stylesheet" href="../styles/base.css">
   <link rel="stylesheet" href="../styles/footer.css">
   <link rel="stylesheet" href="../styles/header.css">
@@ -25,7 +31,7 @@
       <!-- Logo -->
       <div class="logo-container">
         <a href="../../public/index.html">
-        <img class="logo" src="../img/icons/logo.png" alt="Logo">
+          <img class="logo" src="../img/icons/logo.png" alt="Logo">
         </a>
       </div>
 
@@ -48,14 +54,15 @@
 
       <!-- Iconos -->
       <div class="user-buttons">
-       <a href="../public/loging.html"><button class="users"><img src="../img/icons/users2.png" alt="Perfil"></button></a>
+        <a href="../public/loging.html"><button class="users"><img src="../img/icons/users2.png"
+              alt="Perfil"></button></a>
         <button class="favs"><img src="../img/icons/favs2.png" alt="Me gusta"></button>
       </div>
     </nav>
   </header>
 
   <div class="conocerte-container">
-  <img src="../img/icons/queremosconocerte.jpg" alt="Imagen" class="conocerte-imagen">
+    <img src="../img/icons/queremosconocerte.jpg" alt="Imagen" class="conocerte-imagen">
   </div>
   <div class="conocerte-texto">
     ¡Queremos conocerte más!
@@ -63,7 +70,7 @@
 
 
 
-   <footer>
+  <footer>
     <div class="pie">
       <a href="mailto:contacto@adamy.com" target="_blank">CONTAC US HERE</a>
       <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
