--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -16,14 +16,14 @@
 
       <!-- Logo -->
       <div class="logo-container">
-        <a href="../public/index.html">
+        <a href="../../public/index.html">
           <img class="logo" src="../img/icons/logo.png" alt="Logo">
         </a>
       </div>
 
       <!-- Menú desplegable -->
       <ul class="menu" id="menu">
-        <li><a href="../public/index.html">Inicio</a></li>
+        <li><a href="../../public/index.html">Inicio</a></li>
         <li><a href="#">Hombre</a></li>
         <li><a href="#">Mujer</a></li>
         <li><a href="#">Temporada</a></li>
@@ -46,11 +46,11 @@
     </nav>
   </header>
 
-  <main class="container mx-auto p-4">
+  <main class="container mx-auto p-4 mt-12 mb-12">
     <h1 class="text-3xl font-bold text-center mb-8">Contáctanos</h1>
     <div class="grid grid-cols-2 gap-4">
 
-      <!-- Bloque de Dirección -->
+      <!-- Columna izquierda, Mapa -->
       <div class="bg-white shadow-md rounded-md p-4">
         <h2 class="text-2xl font-semibold text-blue-500 mb-2">Dirección</h2>
         <p class="text-gray-700">Calle Falsa 123, Ciudad</p>
@@ -61,26 +61,30 @@
         </div>
       </div>
 
-      <!-- Bloque de Número de Teléfono -->
+      <!-- Columna Derecha: Teléfono, Correo y Redes -->
+    <div class="flex flex-col gap-4">
+      <!-- Teléfono -->
       <div class="bg-white shadow-md rounded-md p-4">
         <h2 class="text-2xl font-semibold mb-2">Teléfono</h2>
         <p class="text-gray-700">+123 456 789</p>
       </div>
 
-      <!-- Bloque de Correo -->
+      <!-- Correo -->
       <div class="bg-white shadow-md rounded-md p-4">
         <h2 class="text-2xl font-semibold mb-2">Correo</h2>
         <p class="text-gray-700">contacto@adamy.com</p>
       </div>
 
-      <!-- Bloque de Redes Sociales -->
+      <!-- Redes Sociales -->
       <div class="bg-white shadow-md rounded-md p-4">
         <h2 class="text-2xl font-semibold mb-2">Redes Sociales</h2>
         <p class="text-gray-700">Instagram: @adamy_ropa</p>
         <p class="text-gray-700">Facebook: ADAMY</p>
       </div>
     </div>
-  </main>
+
+  </div>
+</main>
 
   <footer>
     <div class="pie">
@@ -91,7 +95,7 @@
   </footer>
 
   <script src="../components/Burguer-menu.js"></script>
-  <script src="../../components/indexToProducts.js"></script>
+  <script src="../components/indexToProducts.js"></script>
   <script>
     
     // Cargar mapa de Google
