ajustes de estilos taildwin

--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
 
   <footer>
     <div class="pie">
-      <a href="mailto:contacto@adamy.com" target="_blank">CONTAC US HERE</a>
+      <a href="../src/pages/contact.html">CONTAC US HERE</a>
       <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
       <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
     </div>
