cambios de showPage

--- a/src/pages/ProductsShow.html
+++ b/src/pages/ProductsShow.html
@@ -41,7 +41,7 @@
     
         <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
         <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
-        <li><a href="contact.html">Contactanos</a></li>
+        <li><a href="../pages/contact.html">Contactanos</a></li>
       </ul>
       
       <!-- Barra de búsqueda -->
@@ -83,6 +83,8 @@
        <li><a href="#" data-text="Formal">- Formal</a></li>
       <li><a href="#" data-text="Casual">- Casual</a></li>
       <li><a href="#" data-text="Deportivo">- Deportivo</a></li>
+
+<li><a href="#" data-text="next">- PROXIMAMENTE</a></li>
 
       <li><h4>Color</h4></li>
       <div class="color-options">
