--- a/src/pages/productView.html
+++ b/src/pages/productView.html
@@ -79,6 +79,10 @@
           <button id="add-to-favs" class="add-to-favs-btn">
             Añadir a favoritos
           </button>
+          <button id="add-to-favs" class="add-to-favs-btn2">
+           Comprar
+          </button>
+
         </section>
       </div>
       <section id="product-info-block">
