Agregué iconos de pagina detalle

--- a/src/pages/productView.html
+++ b/src/pages/productView.html
@@ -83,13 +83,13 @@
       </div>
       <section id="product-info-block">
         <aside>
-          <img src="../img/icons/Envío_gratuito.svg" alt="Envío gratuito" />
+          <img src="../img/icons/Envío_gratuito.svg" alt="Envío gratuito" />
           <h3>Envío gratuito</h3>
           <p>En pedidos a partir de 200 €</p>
         </aside>
         <aside>
           <img
-            src="../img/icons/Devoluciones_en_30_días.svg"
+            src="../img/icons/Devoluciones_en_30_días.svg"
             alt="Devoluciones en 30 días"
           />
           <h3>Devoluciones en 30 días</h3>
