fixbug/arreglando menu desde paginas admin y login

--- a/src/pages/AdminPage.html
+++ b/src/pages/AdminPage.html
@@ -125,7 +125,8 @@
 </footer>
 <script src="../components/Burguer-menu.js"></script>
 <script src="../components/admin.js"></script>
-<script src="../src/components/indexToProducts.js"></script>
+
+<script src="../components/contact.js"></script>
 
 
 
