--- a/src/pages/Loging.html
+++ b/src/pages/Loging.html
@@ -73,7 +73,8 @@
   </footer>
   <script src="../components/user.js"></script>
   <script src="../components/Burguer-menu.js"></script>
-  <script src="../components/indexToProducts.js"></script>
+ 
+  <script src="../components/contact.js"></script>
 
 </body>
 
