--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>
         <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
         <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
-        <li><a href="#">Contactanos</a></li>
+        <li><a href="../src/pages/contact.html">Contactanos</a></li>
       </ul>
 
       <!-- Barra de búsqueda -->
@@ -90,7 +90,7 @@
 
   <footer class="site-footer">
     <div class="footer-content">
-      <a href="mailto:contacto@adamy.com" target="_blank">CONTACT US HERE</a>
+      <a href="../src/pages/contact.html">CONTACT US HERE</a>
       <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
       <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
     </div>
