--- a/src/pages/AdminPage.html
+++ b/src/pages/AdminPage.html
@@ -23,37 +23,38 @@
     rel="stylesheet">
 </head>
 <header>
-  <nav class="nav">
-    <div class="menu-toggle" id="menu-toggle">☰</div>
-    <!-- Logo -->
-    <div class="logo-container">
-      <a href="../../public/index.html">
-        <img class="logo" src="../img/icons/logo.png" alt="Logo">
-      </a>
-      </a>
-    </div>
-    <!-- Menú desplegable -->
-    <ul class="menu" id="menu">
-      <li><a href="../../public/index.html">Inicio</a></li>
-      <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>
-      <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
-      <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
-      <li><a href="#">Contactanos</a></li>
-    </ul>
-    <!-- Barra de búsqueda -->
-    <div class="search-bar">
-      <input type="text" placeholder="Buscar producto" id="searchText">
-      <button id="searchButton">
-        <img src="../img/icons/search-icon.png" alt="Buscar" class="search-icon">
-      </button>
-    </div>
-    <!-- Iconos -->
-    <div class="user-buttons">
-      <a href="../pages/Loging.html"><button class="users"><img src="../img/icons/users.png" alt="Perfil"></button></a>
-      <button class="favs"><img src="../img/icons/favs.png" alt="Me gusta"></button>
-    </div>
-  </nav>
-</header>
+    <nav class="nav">
+      <div class="menu-toggle" id="menu-toggle">☰</div>
+      <!-- Logo -->
+      <div class="logo-container">
+        <a href="../../public/index.html">
+          <img class="logo" src="../img/icons/logo.png" alt="Logo">
+        </a>
+        </a>
+      </div>
+      <!-- Menú desplegable -->
+      <ul class="menu" id="menu">
+        <li><a href="../../public/index.html">Inicio</a></li>
+        <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>
+        <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
+        <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
+        <li><a href="../pages/contact.html">Contactanos</a></li>
+      </ul>
+      <!-- Barra de búsqueda -->
+      <div class="search-bar">
+        <input type="text" placeholder="Buscar producto" id="searchText">
+        <button id="searchButton">
+          <img src="../img/icons/search-icon.png" alt="Buscar" class="search-icon">
+        </button>
+      </div>
+      <!-- Iconos -->
+      <div class="user-buttons">
+        <a href="../pages/Loging.html"><button class="users"><img src="../img/icons/users.png"
+              alt="Perfil"></button></a>
+        <button class="favs"><img src="../img/icons/favs.png" alt="Me gusta"></button>
+      </div>
+    </nav>
+  </header>
 <h1>Panel de Administración</h1>
 
 <div class="admin-buttons">
@@ -125,7 +126,7 @@
 </footer>
 <script src="../components/Burguer-menu.js"></script>
 <script src="../components/admin.js"></script>
-<script src="../src/components/indexToProducts.js"></script>
+<script src="../components/indexToProducts.js"></script>
 
 
 
