--- a/src/pages/Loging.html
+++ b/src/pages/Loging.html
@@ -40,7 +40,7 @@
         <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>
         <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
         <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
-        <li><a href="#">Contactanos</a></li>
+        <li><a href="../pages/contact.html">Contactanos</a></li>
       </ul>
       <!-- Barra de búsqueda -->
       <div class="search-bar">
