--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -12,9 +12,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
   <link rel="manifest" href="../src/img/favicon/site.webmanifest">
 
+  <link rel="stylesheet" href="../styles/header.css">
   <link rel="stylesheet" href="../styles/base.css">
   <link rel="stylesheet" href="../styles/footer.css">
-  <link rel="stylesheet" href="../styles/header.css">
   <script src="https://cdn.tailwindcss.com"></script> <!--Llamar al tailwind-->
 </head>
 
@@ -22,15 +22,13 @@
   <header>
     <nav class="nav">
       <div class="menu-toggle" id="menu-toggle">☰</div>
-
       <!-- Logo -->
       <div class="logo-container">
         <a href="../../public/index.html">
           <img class="logo" src="../img/icons/logo.png" alt="Logo">
-          <img class="logo" src="../img/icons/logo.png" alt="Logo">
+        </a>
         </a>
       </div>
-
       <!-- Menú desplegable -->
       <ul class="menu" id="menu">
         <li><a href="../../public/index.html">Inicio</a></li>
@@ -39,7 +37,6 @@
         <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
         <li><a href="../pages/contact.html">Contactanos</a></li>
       </ul>
-
       <!-- Barra de búsqueda -->
       <div class="search-bar">
         <input type="text" placeholder="Buscar producto" id="searchText">
@@ -47,17 +44,14 @@
           <img src="../img/icons/search-icon.png" alt="Buscar" class="search-icon">
         </button>
       </div>
-
       <!-- Iconos -->
       <div class="user-buttons">
-        <a href="../public/loging.html"><button class="users"><img src="../img/icons/users2.png"
+        <a href="../pages/Loging.html"><button class="users"><img src="../img/icons/users.png"
               alt="Perfil"></button></a>
-        <a href="../public/loging.html"><button class="users"><img src="../img/icons/users2.png" alt="Perfil"></button></a>
-        <button class="favs"><img src="../img/icons/favs2.png" alt="Me gusta"></button>
+        <button class="favs"><img src="../img/icons/favs.png" alt="Me gusta"></button>
       </div>
     </nav>
   </header>
-
     
   
   <main class="container mx-auto p-4 mt-12 mb-12">
@@ -101,13 +95,14 @@
 </main>
 
   <footer>
-  <footer>
-    <div class="pie">
-      <a href="contact.html">CONTAC US HERE</a>
+  <footer class="site-footer">
+    <div class="footer-content">
+      <a href="../src/pages/contact.html">CONTACT US HERE</a>
       <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
       <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
     </div>
   </footer>
+
 
   <script src="../components/Burguer-menu.js"></script>
   <script src="../components/indexToProducts.js"></script>
