--- a/src/pages/productView.html
+++ b/src/pages/productView.html
@@ -5,9 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CRUD</title>
-  <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/base.css" />
+
   <link rel="stylesheet" href="../styles/header.css" />
   <link rel="stylesheet" href="../styles/productView.css" />
+  <link rel="stylesheet" href="../styles/footer.css" />
+
 
 
   <!-- Fuentes -->
@@ -18,7 +21,7 @@
     rel="stylesheet" />
 </head>
 
-<body>
+<body class="product-page">
   <header>
     <nav class="nav">
       <div class="menu-toggle" id="menu-toggle">☰</div>
@@ -72,12 +75,12 @@
     </div>
     <section id="product-info-block">
       <aside>
-        <img src="../img/icons/Envío_gratuito.svg" alt="Envío gratuito" />
+        <img src="../img/icons/Envío_gratuito.svg" alt="Envío gratuito" />
         <h3>Envío gratuito</h3>
         <p>En pedidos a partir de 200 €</p>
       </aside>
       <aside>
-        <img src="../img/icons/Devoluciones_en_30_días.svg" alt="Devoluciones en 30 días" />
+        <img src="../img/icons/Devoluciones_en_30_días.svg" alt="Devoluciones en 30 días" />
         <h3>Devoluciones en 30 días</h3>
         <p>Solo productos originales</p>
       </aside>
@@ -88,17 +91,20 @@
       </aside>
     </section>
   </main>
-  <footer class="site-footer">
-    <div class="footer-content">
-      <a href="../src/pages/contact.html">CONTACT US HERE</a>
-      <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
-      <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
-    </div>
-  </footer>
+<footer class="site-footer">
+  <div class="footer-content">
+    <a href="mailto:contacto@adamy.com" target="_blank">CONTACT US HERE</a>
+    <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
+    <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
+  </div>
+</footer>
 
 
   <script src="../components/Burguer-menu.js"></script>
   <script src="../components/productView.js"></script>
   <script src="../components/indexToProducts.js"></script>
+  <script src="../components/contact.js"></script>
+
+
 </body>
 </html>
