Tilde añadida+Removed unused folders and files

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>
         <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
         <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
-        <li><a href="../src/pages/contact.html">Contactanos</a></li>
+        <li><a href="../src/pages/contact.html">Contáctanos</a></li>
       </ul>
 
       <!-- Barra de búsqueda -->
@@ -95,6 +95,7 @@
       <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
     </div>
   </footer>
+  <script src="../src/components/header-scroll.js"></script>
   <script src="../src/components/Burguer-menu.js"></script>
   <script src="../src/components/indexToProducts.js"></script>
 </body>
