--- a/src/pages/ProductsShow.html
+++ b/src/pages/ProductsShow.html
@@ -10,11 +10,10 @@
   <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
   <link rel="manifest" href="../src/img/favicon/site.webmanifest">
 
-  <link rel="stylesheet" href="../styles/cards.css" />
-  
-  <link rel="stylesheet" href="../styles/header.css" />
+  <link rel="stylesheet" href="../styles/cards.css" />  
   <link rel="stylesheet" href="../styles/productsPage.css" />
-    <link rel="stylesheet" href="../styles/footer.css" />
+  <link rel="stylesheet" href="../styles/footer.css" />
+  <link rel="stylesheet" href="../styles/header.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,7 +38,7 @@
         <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>
         <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
         <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
-        <li><a href="../pages/contact.html">Contactanos</a></li>
+        <li><a href="../pages/contact.html">Contáctanos</a></li>
       </ul>
       <!-- Barra de búsqueda -->
       <div class="search-bar">
