--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -35,7 +35,7 @@
         <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>
         <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
         <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
-        <li><a href="../pages/contact.html">Contactanos</a></li>
+        <li><a href="../pages/contact.html">Contáctanos</a></li>
       </ul>
       <!-- Barra de búsqueda -->
       <div class="search-bar">
