--- a/src/pages/productView.html
+++ b/src/pages/productView.html
@@ -37,7 +37,7 @@
         <li><a href="#" class="link-hover" data-id="Hombre">Hombre</a></li>
         <li><a href="#" class="link-hover" data-id="Mujer">Mujer</a></li>
         <li><a href="#" class="link-hover" data-id="Verano">Temporada</a></li>
-        <li><a href="../pages/contact.html">Contactanos</a></li>
+        <li><a href="../pages/contact.html">Contáctanos</a></li>
       </ul>
       <!-- Barra de búsqueda -->
       <div class="search-bar">
@@ -99,10 +99,10 @@
   </div>
 </footer>
 
-
+  <script src="../components/header-scroll.js"></script>
   <script src="../components/Burguer-menu.js"></script>
   <script src="../components/productView.js"></script>
-    <script src="../components/contact.js"></script>
+  <script src="../components/contact.js"></script>
 
 
 </body>
