actualizacion de rutas de contáctanos

--- a/src/pages/ProductsShow.html
+++ b/src/pages/ProductsShow.html
@@ -142,7 +142,7 @@
 
    <footer class="site-footer">
     <div class="footer-content">
-      <a href="../src/pages/contact.html">CONTACT US HERE</a>
+      <a href="../pages/contact.html">CONTACT US HERE</a>
       <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
       <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
     </div>
