--- a/src/pages/Loging.html
+++ b/src/pages/Loging.html
@@ -66,7 +66,7 @@
   </form>
   <footer class="site-footer">
     <div class="footer-content">
-      <a href="mailto:contacto@adamy.com" target="_blank">CONTACT US HERE</a>
+      <a href="../pages/contact.html" target="_blank">CONTACT US HERE</a>
       <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
       <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
     </div>
