--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -97,7 +97,7 @@
   <footer>
   <footer class="site-footer">
     <div class="footer-content">
-      <a href="../src/pages/contact.html">CONTACT US HERE</a>
+      <a href="../pages/contact.html">CONTACT US HERE</a>
       <a href="https://www.instagram.com" target="_blank">INSTAGRAM</a>
       <p>ADAMY @ 2025 TODOS LOS DERECHOS RESERVADOS</p>
     </div>
