--- a/src/pages/AdminPage.html
+++ b/src/pages/AdminPage.html
@@ -68,7 +68,7 @@
   <div class="form-grid">
     <input type="text" placeholder="Nombre" id="name" required />
     <input type="text" placeholder="Descripción" id="description" />
-    <input type="text" placeholder="Imagen (nombre archivo)" id="image" />
+  <input type="file" id="imageInput" accept="image/*" />
     <input type="number" placeholder="Precio" id="price" step="0.01" />
     <input type="number" placeholder="Descuento (%)" id="discount" />
 
