--- a/src/pages/AdminPage.html
+++ b/src/pages/AdminPage.html
@@ -69,12 +69,14 @@
     <input type="text" placeholder="Nombre" id="name" required />
     <input type="text" placeholder="Descripción" id="description" />
   <input type="file" id="imageInput" accept="image/*" />
+  <img id="imagePreview" style="max-width: 150px; display: none;" />
     <input type="number" placeholder="Precio" id="price" step="0.01" />
     <input type="number" placeholder="Descuento (%)" id="discount" />
 
     <select id="color" required>
       <option value="">Color</option>
       <option value="Negro">Negro</option>
+      <option value="Amarillo">Amarillo</option>
       <option value="Azul">Azul</option>
       <option value="Blanco">Blanco</option>
       <option value="Rojo">Rojo</option>
