feat/carrito de compras ok

--- a/src/pages/ProductsShow.html
+++ b/src/pages/ProductsShow.html
@@ -51,7 +51,11 @@
       <div class="user-buttons">
         <a href="../pages/Loging.html"><button class="users"><img src="../img/icons/users.png"
               alt="Perfil"></button></a>
-        <button class="favs"><img src="../img/icons/favs.png" alt="Me gusta"></button>
+        <!--button class="favs"><img src="../img/icons/favs.png" alt="Me gusta"></button-->
+      <button class="favs" id="cart-icon">
+   <a href="../pages/add2Cart.html"><img src="../img/icons/favs.png" alt="Carrito" /></a>
+  <span id="cart-count" class="cart-count">0</span>
+</button>
       </div>
     </nav>
   </header>
@@ -149,6 +153,7 @@
   </footer>
   <script src="../components/productCard.js"></script>
   <script src="../components/Burguer-menu.js"></script>
+  ;<script src="../components/cartCount.js"></script>
 </body>
 
 
