--- a/src/pages/AdminPage.html
+++ b/src/pages/AdminPage.html
@@ -50,7 +50,11 @@
     <!-- Iconos -->
     <div class="user-buttons">
       <a href="../pages/Loging.html"><button class="users"><img src="../img/icons/users.png" alt="Perfil"></button></a>
-      <button class="favs"><img src="../img/icons/favs.png" alt="Me gusta"></button>
+      <!--button class="favs"><img src="../img/icons/favs.png" alt="Me gusta"></button-->
+       <button class="favs" id="cart-icon">
+   <a href="../pages/add2Cart.html"><img src="../img/icons/favs.png" alt="Carrito" /></a>
+  <span id="cart-count" class="cart-count">0</span>
+</button>
     </div>
   </nav>
 </header>
@@ -127,7 +131,8 @@
 <script src="../components/contact.js"></script>
 <script src="../components/Burguer-menu.js"></script>
 <script src="../components/admin.js"></script>
-<script src="../components/indexToProducts.js"></script>
+<script src="../components/cartCount.js"></script>
+
 
 <body>
 
