--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,10 @@
       <div class="user-buttons">
         <a href="../src/pages/Loging.html"><button class="users"><img src="../src/img/icons/users.png"
               alt="Perfil"></button></a>
-        <button class="favs"><img src="../src/img/icons/favs.png" alt="Me gusta"></button>
+       <button class="favs" id="cart-icon">
+   <a href="../src/pages/add2Cart.html"><img src="../src/img/icons/favs.png" alt="Carrito" /></a>
+  
+</button>
       </div>
     </nav>
   </header>
