--- a/src/pages/add2Cart.html
+++ b/src/pages/add2Cart.html
@@ -50,7 +50,9 @@
       <div class="user-buttons">
         <a href="../pages/Loging.html"><button class="users"><img src="../img/icons/users.png"
               alt="Perfil"></button></a>
-        <button class="favs"><img src="../img/icons/favs.png" alt="Me gusta"></button>
+      <button class="favs" id="cart-icon">
+   <a href="../pages/add2Cart.html"><img src="../img/icons/favs.png" alt="Carrito" /></a>
+  <span id="cart-count" class="cart-count">0</span>
       </div>
     </nav>
   </header>
@@ -106,5 +108,6 @@
  
   <script src="../components/contact.js"></script>
   <script src="../components/add2Cart.js"></script>
+  <script src="../components/cartCount.js"></script>
 </body>
 </html>
